<resources>
    <string name="app_name">Tidy_City_App</string>
    <string name="record_button">Start Recording Video</string>
    <string name="alert_description">Upload de conteúdo</string>
    <string name="alert_description_message">Pretende fazer upload do vídeo?</string>
    <string name="uploading_message">Uploading...</string>
    <string name="leave_it">Sim</string>
    <string name="record_again">Gravar novo vídeo</string>
    <string name="take_photo">Take photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="internet_connectivity">Conexão à Internet</string>
    <string name="internet_message">Para fazer upload do conteúdo precisa de conexão à internet...</string>
    <string name="turn_on_internet">Ligar a internet</string>
    <string name="upload_later">Fazer upload mais tarde</string>
    <string name="plastic_bag">Plastic Bag</string>
    <string name="cardbox">CardBox</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="furniture">Furniture</string>
    <string name="small_container">Small Container</string>
    <string name="big_container">Big Container</string>
    <string name="underground_container">Underground Container</string>
    <string name="graffiti">Graffiti</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="edit_email_login">Email</string>
    <string name="edit_pass_login">Password</string>
    <string name="recovery_pass_message">Esqueceu-se da Palavra Passe?</string>
    <string name="pass_repeat">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="account_question">Ainda não tem conta?</string>
    <string name="create">Criar Agora</string>
    <string name="get_started">Get Started</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome back,</string>
    <string name="settings">Settings</string>
    <string name="upload_history">Upload History</string>
    <string name="details">Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>
    <string name="ver_trajeto">Ver Trajeto</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="weak_pass">A password é fraca! \nPelo menos uma letra maiúscula,
        \nPelo menos um número, \nPelo menos 6 carateres, \nPelo menos um caracter especial.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tap_to_upload">Tap to Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="log_out">Log Out</string>
    <string name="not_now">Agora não</string>
    <string name="videos_to_upload">Existem uploads pendentes. Pretende fazer upload?</string>
    <string name="descartar_video">Descartar vídeo</string>
    <string name="rails">Rails</string>
    <string name="outdoor">Outdoor</string>
    <string name="appliances_furniture">Appliances_Furniture</string>
    <string name="traffic_signs">Traffic_Signs</string>
    <string name="iconback">iconBack</string>
    <string name="upload_settings">Upload Settings:</string>
    <string name="wifi_only">Wifi Only</string>
    <string name="wifi_or_mobile_network">Wifi or Mobile Network</string>
    <string name="notifications">Notifications</string>
    <string name="invites">Invites</string>
    <string name="pod_access">Pod Access</string>
    <string name="events">Events</string>
    <string name="annotations">Annotations</string>
    <string name="where_do_you_want_to_store_your_data">Where do you want to store your data?</string>
    <string name="use_theia">Use Theia</string>
    <string name="use_solid">Use Solid</string>
    <string name="pod_accesses">Pod Accesses</string>
    <string name="pod_files">POD Files</string>

</resources>