<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SettingsActivity">

    <RelativeLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_1"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/iconback" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/backIcon"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!-- Right Icon -->

        <ImageView
            android:id="@+id/dotsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_3dots"
            app:tint="@android:color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_user"
            app:tint="@android:color/white"
            android:layout_toStartOf="@id/dotsIcon"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_notif"
            app:tint="@android:color/white"
            android:layout_toStartOf="@id/userIcon"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <!-- Text -->
    <TextView
        android:id="@+id/uploadSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_settings"
        app:layout_constraintTop_toBottomOf="@id/topBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

    <!-- Radio Buttons -->
    <RadioButton
        android:id="@+id/WifiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_only"
        app:layout_constraintTop_toBottomOf="@id/uploadSettings"
        app:layout_constraintStart_toStartOf="@id/uploadSettings"
        android:layout_marginTop="8dp"/>

    <RadioButton
        android:id="@+id/Wifi_Mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_or_mobile_network"
        app:layout_constraintTop_toBottomOf="@id/WifiButton"
        app:layout_constraintStart_toStartOf="@id/uploadSettings"
        android:layout_marginTop="8dp"/>

    <!-- Checkbox -->
    <CheckBox
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        app:layout_constraintStart_toStartOf="@id/uploadSettings"
        app:layout_constraintTop_toBottomOf="@id/Wifi_Mobile"
        android:layout_marginTop="8dp"/>

    <!-- Additional Checkboxes -->
    <CheckBox
        android:id="@+id/events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        app:layout_constraintStart_toStartOf="@id/notifications"
        app:layout_constraintTop_toBottomOf="@id/notifications"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <CheckBox
        android:id="@+id/annotations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annotations"
        app:layout_constraintStart_toStartOf="@id/events"
        app:layout_constraintTop_toBottomOf="@id/events"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invites"
        app:layout_constraintStart_toStartOf="@id/events"
        app:layout_constraintTop_toBottomOf="@id/annotations"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/PodAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pod_access"
        app:layout_constraintStart_toStartOf="@id/events"
        app:layout_constraintTop_toBottomOf="@id/invites"
        />

    <TextView
        android:id="@+id/storeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/notifications"
        app:layout_constraintTop_toBottomOf="@id/PodAccess"
        android:text="@string/where_do_you_want_to_store_your_data"
        android:layout_marginTop="8dp"
        android:textSize="20sp" />


    <Button
        android:id="@+id/solidPod"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/use_solid"
        android:backgroundTint="@color/button_background"
        app:cornerRadius="25dp"
        android:drawableEnd="@drawable/baseline_info_24"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storeData"/>

    <Button
        android:id="@+id/theiaApi"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/use_theia"
        android:backgroundTint="@color/white"
        app:strokeWidth="1dp"
        app:strokeColor="@color/button_background"
        app:cornerRadius="25dp"
        android:textColor="#9747FF"
        android:drawableTint="@color/button_background"
        android:drawableEnd="@drawable/baseline_info_24"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/solidPod"/>


</androidx.constraintlayout.widget.ConstraintLayout>

