<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignInActivity"
    tools:ignore="Autofill, LabelFor">

    <ImageView
        android:layout_height="200dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/image"
        android:background="@drawable/background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="@font/acme_regular"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regs_name_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/edit_email_login"
        app:hintTextColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Enter first password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regs_name_fpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/edit_pass_login"
        app:hintTextColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@+id/regs_name_email"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    forget password -->
    <TextView
        android:id="@+id/pass_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/regs_name_fpass"
        app:layout_constraintEnd_toEndOf="@+id/regs_name_fpass"
        android:text="@string/recovery_pass_message"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/sign_in"
        android:backgroundTint="@color/green_background"
        android:textSize="25dp"
        android:fontFamily="@font/acme_regular"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_forget" />

    <!--    create an acount-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_question" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/create"
            android:textStyle="bold"
            android:onClick="switchRegister"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>