<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CameraRecorderActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/btnGoBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTintMode="@color/white"
        android:background="@drawable/ic_baseline_arrow_back_24" />

    <ToggleButton
        android:id="@+id/cls1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/box_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintRight_toLeftOf="@+id/cls4"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cardbox"/>

    <ToggleButton
        android:id="@+id/cls2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/graf_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintRight_toLeftOf="@+id/cls5"
        app:layout_constraintTop_toBottomOf="@+id/cls1"
        android:contentDescription="@string/graffiti"/>

    <ToggleButton
        android:id="@+id/cls3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/signs_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintRight_toLeftOf="@+id/cls7"
        app:layout_constraintTop_toBottomOf="@+id/cls2"
        android:contentDescription="@string/traffic_signs" />

    <ToggleButton
        android:id="@+id/cls4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bag_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:contentDescription="@string/plastic_bag"/>

    <ToggleButton
        android:id="@+id/cls5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/mono_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cls4"
        android:contentDescription="@string/appliances_furniture"/>

    <ToggleButton
        android:id="@+id/cls6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rail_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cls5"
        android:contentDescription="@string/rails"/>

    <ToggleButton
        android:id="@+id/cls7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ads_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cls6"
        android:contentDescription="@string/outdoor"/>


    <ImageButton
        android:id="@+id/videoCaptureButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/ic_start"
        android:contentDescription="@string/record_button"
        android:scaleType="fitCenter"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Chronometer
        android:id="@+id/idTCClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/videoCaptureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/gpsToogle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_baseline_gps_not_fixed_24"
        android:scaleType="fitCenter"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:id="@+id/mic_off"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/baseline_mic_off_24"
        android:scaleType="fitCenter"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

</androidx.constraintlayout.widget.ConstraintLayout>