<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:chainUseRtl="true"
    tools:context=".views.CreateAccountActivity"
    tools:ignore="Autofill">

    <ImageView
        android:layout_height="150dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/image"
        android:background="@drawable/background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:id="@+id/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:fontFamily="@font/acme_regular"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regs_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/username"
        app:hintTextColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:errorEnabled="true" >

        <EditText
            android:id="@+id/etUser"
            android:contentDescription="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regs_name_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/edit_email_login"
        app:hintTextColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@+id/regs_username"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etEmail"
            android:contentDescription="@string/edit_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Enter first password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regs_name_fpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/edit_pass_login"
        app:hintTextColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@+id/regs_name_email"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etPwd"
            android:contentDescription="@string/edit_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Repeat password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regs_name_spass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/pass_repeat"
        app:hintTextColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@+id/regs_name_fpass"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etRPwd"
            android:contentDescription="@string/edit_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/acme_regular"
        android:textColor="@color/green_background"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/regs_name_spass"
        app:layout_constraintTop_toBottomOf="@id/regs_name_spass" />



    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green_background"
        android:text="@string/sign_up"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/acme_regular"
        app:layout_constraintEnd_toEndOf="@id/regs_name_spass"
        app:layout_constraintTop_toBottomOf="@id/regs_name_spass" />

</androidx.constraintlayout.widget.ConstraintLayout>